packages/libs/error-stack/tests/ui/into_report.stderr
error[E0599]: the method `into_report` exists for enum `Result<(), error_stack::Report<RootError>>`, but its trait bounds were not satisfied
    |
   ::: src/report.rs
    |
    | pub struct Report<C> {
    | -------------------- doesn't satisfy `_: From<error_stack::Report<RootError>>`
    |
   ::: $RUST/core/src/result.rs
    |
    | pub enum Result<T, E> {
    | --------------------- doesn't satisfy `_: IntoReport`
   --> tests/ui/into_report.rs:22:20
    |
22  |     let _ = result.into_report();
    |                    ^^^^^^^^^^^
    |
    = note: the following trait bounds were not satisfied:
            `error_stack::Report<error_stack::Report<RootError>>: From<error_stack::Report<RootError>>`
            which is required by `Result<(), error_stack::Report<RootError>>: IntoReport`
